objects/ACV_Field_Mapping__mdt.object
<CustomObject>
    <description>This metadata is child for Outbound Integration metadata and contains fields information for an Integration</description>
    <fields>
        <fullName>Acv_integration__c</fullName>
        <label>Acv integration</label>
        <referenceTo>Acv_integration__mdt</referenceTo>
        <relationshipName>ACV_Field_Mapping</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>PickList</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Object_Api_Name__c</fullName>
        <label>Reference Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Api_Name_When_Reference__c</fullName>
        <label>SF Api Name When Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Api_Name__c</fullName>
        <label>Salesforce Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Integration Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Acv_integration__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Reference_Object_Api_Name__c</columns>
        <columns>Salesforce_Api_Name__c</columns>
        <columns>SF_Api_Name_When_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Outbound Integration Field Mappings</pluralLabel>
</CustomObject>